--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install pip --upgrade
-          pip install -r requirements-dev.txt
+          pip install -r requirements.txt
 
 #      - name: Linting code
 #        run: |
